manifest/objects/ALTF__Opportunity_Plan_Type_List__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Details of the Altify tabs, whether an individual tab is enabled or disabled etc.</description>
    <fields>
        <fullName>ALTF__AssessmentQuestionIds__c</fullName>
        <description>Comma-separated list of Assessment Question IDs</description>
        <inlineHelpText>Comma-separated list of Assessment Question IDs</inlineHelpText>
        <label>AssessmentQuestionIds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Custom_Tab_One_Icon_Class__c</fullName>
        <defaultValue>&quot;sldsico-utility-ribbon&quot;</defaultValue>
        <description>This is the Salesforce lightning icon that will be shown for this Custom Tab</description>
        <inlineHelpText>This is the Salesforce lightning icon that will be shown for this Custom Tab</inlineHelpText>
        <label>Tab One Icon Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Custom_Tab_One_Label__c</fullName>
        <description>This is the Label which will appear in your Custom Tab</description>
        <inlineHelpText>This is the Label which will appear in your Custom Tab</inlineHelpText>
        <label>Tab One Label</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Custom_Tab_One_Src__c</fullName>
        <description>The Visualforce page which your Custom Tab will show</description>
        <inlineHelpText>The Visualforce page which your Custom Tab will show</inlineHelpText>
        <label>Tab One Src</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Custom_Tab_Three_Icon_Class__c</fullName>
        <defaultValue>&quot;sldsico-utility-thunder&quot;</defaultValue>
        <description>This is the Salesforce lightning icon that will be shown for this Custom Tab</description>
        <inlineHelpText>This is the Salesforce lightning icon that will be shown for this Custom Tab</inlineHelpText>
        <label>Tab Three Icon Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Custom_Tab_Three_Label__c</fullName>
        <description>This is the Label which will appear in your Custom Tab</description>
        <inlineHelpText>This is the Label which will appear in your Custom Tab</inlineHelpText>
        <label>Tab Three Label</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Custom_Tab_Three_Src__c</fullName>
        <description>The Visualforce page which your Custom Tab will show</description>
        <inlineHelpText>The Visualforce page which your Custom Tab will show</inlineHelpText>
        <label>Tab Three Src</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Custom_Tab_Two_Icon_Class__c</fullName>
        <defaultValue>&quot;sldsico-utility-setup_assistant_guide&quot;</defaultValue>
        <description>This is the Salesforce lightning icon that will be shown for this Custom Tab</description>
        <inlineHelpText>This is the Salesforce lightning icon that will be shown for this Custom Tab</inlineHelpText>
        <label>Tab Two Icon Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Custom_Tab_Two_Label__c</fullName>
        <description>This is the Label which will appear in your Custom Tab</description>
        <inlineHelpText>This is the Label which will appear in your Custom Tab</inlineHelpText>
        <label>Tab Two Label</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Custom_Tab_Two_Src__c</fullName>
        <description>The Visualforce page which your Custom Tab will show</description>
        <inlineHelpText>The Visualforce page which your Custom Tab will show</inlineHelpText>
        <label>Tab Two Src</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Disable_Decision_Criteria__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, hides decision criteria functionality.</description>
        <inlineHelpText>If checked, hides decision criteria functionality.</inlineHelpText>
        <label>Disable Decision Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Show_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting is deprecated and has been replaced by the Tab Name List setting.</description>
        <label>Show Assessment (DEPRECATED)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Show_FSM10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Signal 10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Show_FSM1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Signal 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Show_FSM2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Signal 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Show_Insight_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting is deprecated and has been replaced by the Tab Name List setting.</description>
        <label>Show Insights (DEPRECATED)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Show_Prime_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting is deprecated and has been replaced by the Tab Name List setting.</description>
        <label>Show Actions (DEPRECATED)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Show_Relationship_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting is deprecated and has been replaced by the Tab Name List setting.</description>
        <label>Show Relationships (DEPRECATED)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Show_Sales_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting is deprecated and has been replaced by the Tab Name List setting.</description>
        <label>Show Process (DEPRECATED)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Show_Test_and_Improve__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting is deprecated and has been replaced by the Tab Name List setting.</description>
        <label>Show Test and Improve (DEPRECATED)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Tab_Name_List__c</fullName>
        <defaultValue>&quot;Overview,Process,Assessment,RelMap,Insight,Actions,TestImprove&quot;</defaultValue>
        <description>Enter the names of the Altify Tabs in the required order as a comma separated list. The tabs are as follows: Overview, Process, RelMap, Insight, Actions, TestImprove, CustomTab1, CustomTab2, CustomTab3</description>
        <inlineHelpText>Enter the names of the Altify Tabs in the required order as a comma separated list. The tabs are as follows: Overview, Process, RelMap, Insight, Actions, TestImprove, CustomTab1, CustomTab2, CustomTab3</inlineHelpText>
        <label>Tab Name List</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Altify Opportunity Plan Type List</label>
</CustomObject>